--- a/webpages/contents/style/index.css
+++ b/webpages/contents/style/index.css
@@ -424,18 +424,46 @@ section > h1 {
   z-index: 0;
 }
 
+#portfolio {
+  height: 135vh;
+}
+
+#portfolio > h1 {
+  top: 9%;
+}
+
+#portfolio > h2 {
+  color: var(--green);
+  font-size: 45px;
+  opacity: 0.2;
+  position: absolute;
+  right: 11.5%;
+}
+
+#contributions {
+  top: 11.9%;
+}
+
+#pinned {
+  top: 31.3%;
+}
+
+#language {
+  top: 52.8%;
+}
+
 #portfolio > div {
   display: grid;
   width: 80%;
   height: 70%;
   padding: 22.5vh 10% 7.5vh 10%;
-  grid-template-rows: 1fr 0.75fr 1.25fr;
-  gap: 12.5%;
+  grid-template-rows: 0.75fr 1fr 1.25fr;
+  gap: 10%;
 }
 
 .row1 {
   display: inline-flex;
-  gap: 1.5%;
+  gap: 14%;
   width: 100%;
   height: 100%;
 }
@@ -477,18 +505,8 @@ section > h1 {
 }
 
 #contributions-heatmap {
-  width: 75%;
+  width: 60%;
   height: fit-content;
-}
-
-#contributions {
-  color: var(--background);
-  font-size: 45px;
-  opacity: 0.2;
-  position: absolute;
-  top: 16%;
-  right: 10%;
-  z-index: 0;
 }
 
 #repo-container {
@@ -497,6 +515,8 @@ section > h1 {
 }
 
 .repo-card {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
   box-sizing: border-box;
   border: 1px solid #85919e60;
   border-radius: 12px;
@@ -504,6 +524,9 @@ section > h1 {
   width: 245px;
   transition: all 120ms ease-in;
   box-shadow: #4c5f7290 0 4px 16px -8px;
+  text-decoration: none;
+  cursor: pointer;
+  height: max-content;
 }
 
 .repo-card:hover {
@@ -520,17 +543,19 @@ section > h1 {
   letter-spacing: -0.4px;
   margin-bottom: 18px;
   line-height: 1;
+  height: fit-content;
 }
 
 .repo-card .description {
   color: #676a6c;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
   margin-bottom: 18px;
   font-size: 11px;
+  height: 100%;
 }
 
 .repo-card .card-bottom {
@@ -539,6 +564,7 @@ section > h1 {
   justify-content: start;
   gap: 12px;
   font-size: 11px;
+  align-self: end;
 }
 
 .repo-card h3 span {
@@ -566,12 +592,85 @@ section > h1 {
   color: #676a6c;
 }
 
-#pinned {
-    color: var(--background);
-    font-size: 45px;
-    opacity: 0.2;
-    position: absolute;
-    top: 44.5%;
-    right: 10%;
-    z-index: 0;
+.row3 > div {
+  width: 90%;
+  height: fit-content;
+  border: 1px solid #85919e60;
+  border-radius: 12px;
+  padding: 5%;
+  box-shadow: #4c5f7290 0 4px 16px -8px;
+  display: flex;
+}
+
+#language-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 80%;
+  height: 100%;
+}
+
+.language-div {
+  display: grid;
+  grid-template-rows: auto auto;
+  padding: 10px;
+  border-top: 1px solid rgba(103, 106, 108, 0.5);
+  border-left: 1px solid rgba(103, 106, 108, 0.5);
+}
+
+.language-div:nth-child(-n + 3) {
+  border-top: none;
+}
+
+.language-div:nth-child(3n + 1) {
+  border-left: none;
+}
+
+.language-div .language {
+  display: flex;
+  align-items: center;
+  color: var(--background);
+  font-weight: 700;
+  margin-right: 8px;
+}
+
+.language-div .language span {
+  margin-left: 5px;
+}
+
+.language-div .loc {
+  align-self: end;
+  padding-left: 2.5%;
+  padding-top: 10%;
+}
+
+.language-div .loc span {
+  font-size: 12.5px;
+  color: var(--background);
+  font-weight: 700;
+}
+
+.language-div .loc span:before {
+  content: "LOC: ";
+  color: #676a6c;
+  font-weight: 500;
+}
+
+#language-diagram {
+  width: 20%;
+  min-width: 95px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#myChart {
+  width: 100% !important;
+  height: 100% !important;
+}
+
+#language-diagram .profile-img {
+  position: absolute;
+  width: 97px;
+  height: 97px;
 }
